@@ -133,6 +133,9 @@
       <name>Julen Parra</name>
     </contributor>
     <contributor>
+      <name>Mike Schrag</name>
+    </contributor>
+    <contributor>
       <name>Kandarp Shah</name>
     </contributor>
   </contributors>
